# ytdlp-emby-organise

./: Cargo.toml  README.md
src/: main.rs
